--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,7 +12,6 @@ name = "campsite_tracker"
 path = "src/lib.rs"
 
 [dependencies]
-anyhow = "1.0"
 actix-web = "4.4"
 actix-files = "0.6"
 tokio = "1.45"
@@ -20,3 +19,14 @@ reqwest = { version = "0.12.19", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 urlencoding = "2.1"
+
+# Database dependencies
+sqlx = { version = "0.8.6", features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "uuid",
+    "chrono",
+    "json",
+] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
