--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -27,11 +27,11 @@ urlencoding = "2.1"
 
 # Database dependencies
 sqlx = { version = "0.8.6", features = [
-    "runtime-tokio-rustls",
-    "postgres",
-    "uuid",
-    "chrono",
-    "json",
+  "runtime-tokio-rustls",
+  "postgres",
+  "uuid",
+  "chrono",
+  "json",
 ] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -49,3 +49,15 @@ thiserror = "2.0"
 
 # Environment variables
 dotenvy = "0.15"
+
+[workspace]
+resolver = "2"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+missing_docs = "warn"
+
+[workspace.lints.clippy]
+all = "warn"
+pedantic = "warn"
+nursery = "warn"
