--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -2,6 +2,10 @@
 name = "campsite-tracker"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
+
+[lints]
+workspace = true
 
 [[bin]]
 name = "campsite-tracker"
@@ -14,7 +18,6 @@ path = "src/lib.rs"
 [dependencies]
 # Core dependencies
 env_logger = "0.11.8"
-lazy_static = "1.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = "1.45"
@@ -50,14 +53,9 @@ thiserror = "2.0"
 # Environment variables
 dotenvy = "0.15"
 
-[workspace]
-resolver = "2"
-
 [workspace.lints.rust]
-unsafe_code = "forbid"
 missing_docs = "warn"
 
 [workspace.lints.clippy]
-all = "warn"
-pedantic = "warn"
-nursery = "warn"
+module_inception = "allow"
+new_without_default = "allow"
