--- a/backend/crates/web_server/Cargo.toml
+++ b/backend/crates/web_server/Cargo.toml
@@ -10,6 +10,7 @@ auth_services = { workspace = true }
 dotenvy = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
+notification_services = { workspace = true }
 postgres = { workspace = true }
 rec_gov = { workspace = true }
 serde_json = { workspace = true }
