--- a/backend/crates/notification_services/Cargo.toml
+++ b/backend/crates/notification_services/Cargo.toml
@@ -11,6 +11,7 @@ workspace = true
 chrono = { workspace = true }
 log = { workspace = true }
 rand = { workspace = true }
+serde = { workspace = true }
 thiserror = { workspace = true }
 
 # AWS SDK for Notification services
