--- a/backend/crates/web_handlers/Cargo.toml
+++ b/backend/crates/web_handlers/Cargo.toml
@@ -8,6 +8,7 @@ actix-web = { workspace = true }
 auth_services = { workspace = true }
 bcrypt = { workspace = true }
 chrono = { workspace = true }
+log = { workspace = true }
 notification_services = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
