--- a/backend/crates/campground-scan/Cargo.toml
+++ b/backend/crates/campground-scan/Cargo.toml
@@ -9,7 +9,7 @@ chrono = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
-thiserror = "1.0"
+thiserror = { workspace = true }
 uuid = { workspace = true }
 validator = { workspace = true }
 
