--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,11 +11,13 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.9.1"
 tokio = { version = "1.45", features = ["full"] }
+tracing = "0.1"
+async-trait = "0.1"
 
 # Web framework and utilities
 actix-web = "4.4"
 actix-files = "0.6"
-reqwest = { version = "0.12.19", features = ["json"] }
+reqwest = { version = "0.12.19", features = ["json", "cookies"] }
 urlencoding = "2.1"
 
 # Database dependencies
